--- a/apps/core/templates/index.html
+++ b/apps/core/templates/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-</head>
-<body>
-    <h1>دیگه کاراتو فراموش نکن!</h1>
-    <p>با بله تودو لیست همه چیز به خوبی پیش میره</p>
-</body>
-</html>
+{% extends 'base/base.html' %}
+
+{% block title %}
+صفحه ی اصلی
+{% endblock title %}
+
+{% block content %}
+<h1>دیگه کاراتو فراموش نکن!</h1>
+<p>با بله تودو لیست همه چیز به خوبی پیش میره</p>
+{% endblock content %}
